--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <body>
     <!-- Navbar -->
     <nav>
-      <div class="logo">
-        <img src="C:\Users\DELL 7389 2IN1\Downloads\bookshop.png" alt="Toko Buku Logo" style="height: 40px" />
-      </div>
+      <div class="logo"><img src="images/bookshop.png" alt="Toko Buku Logo" style="height: 40px" /></div>
       <ul>
         <li>
           <a href="#home"><i class="fas fa-home"></i> Home</a>
@@ -30,7 +28,7 @@
 
     <!-- Jumbotron -->
     <header id="home" class="jumbotron">
-      <img src="C:\Users\DELL 7389 2IN1\Downloads\bookshop.png" alt="Toko Buku Logo" style="height: 100px; margin-bottom: 20px" />
+      <img src="images/bookshop.png" alt="Toko Buku Logo" style="height: 100px; margin-bottom: 20px" />
       <h1>Selamat Datang di Pustaka Pintar</h1>
       <p>Temukan Dunia Baru di Setiap Halaman</p>
       <p>Rak Buku Digital Anda, Hanya di Sini!</p>
@@ -45,22 +43,22 @@
       <!-- Katalog Buku -->
       <div class="catalog">
         <div class="book-item">
-          <img src="D:\Documents\Semester 3\Praktikum SIM\evaluasi 4\coding.jpeg" alt="Buku 1" />
+          <img src="images/coding.jpeg" alt="Buku 1" />
           <h3>Belajar Coding</h3>
           <p>Rp 100.000</p>
         </div>
         <div class="book-item">
-          <img src="D:\Documents\Semester 3\Praktikum SIM\evaluasi 4\bisnis.jpeg" alt="Buku 2" />
+          <img src="images/bisnis.jpeg" alt="Buku 2" />
           <h3>Bisnis Online</h3>
           <p>Rp 85.000</p>
         </div>
         <div class="book-item">
-          <img src="D:\Documents\Semester 3\Praktikum SIM\evaluasi 4\py.jpeg" alt="Buku 3" />
+          <img src="images/py.jpeg" alt="Buku 3" />
           <h3>Pemrograman Python</h3>
           <p>Rp 120.000</p>
         </div>
         <div class="book-item">
-          <img src="D:\Documents\Semester 3\Praktikum SIM\evaluasi 4\teras.jpeg" alt="Buku 4" />
+          <img src="images/teras.jpeg" alt="Buku 4" />
           <h3>Filosofi Teras</h3>
           <p>Rp 95.000</p>
         </div>
